kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__paren_recovery_2.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 33
expression: "crate::tests::parsing_expr_string(r#\"(\"#)"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Missing(
                    MissingExpr,
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 1,
}

