kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__paren_recovery_4.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 37
expression: "crate::tests::parsing_expr_string(r#\"(a\"#)"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "a",
                        ],
                        pos: [
                            Node {
                                node: (),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 2,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 2,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}

